Interface do jogo terminada (não responsiva)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="screen">
+        <div class="player-side">
+            <h1 id="player-points">0</h1>
+            <img src="images/player.png" alt="The player image" id="icon">
+            <div class="options">
+                <img src="images/rock.png" alt="The rock choice" class="rock" id="option">
+                <img src="images/paper.png" alt="The paper choice" class="paper" id="option">
+                <img src="images/scissors.png" alt="The scissors choice" class="scissors" id="option">
+            </div>
+        </div>
+        <div class="robot-side">
+            <h1 id="robot-points">0</h1>
+            <img src="images/player.png" alt="The robot image" class="robot-icon" id="icon">
+            <div class="robot-options">
+                <img src="images/rock.png" alt="The rock choice" class="robot-rock" id="option">
+                <img src="images/paper.png" alt="The paper choice" class="robot-paper" id="option">
+                <img src="images/scissors.png" alt="The scissors choice" class="robot-scissors" id="option">
+            </div>
+        </div>
+        <div class="result-footer">
+            <h1 class="result">Start the game by choosing a movement!</h1>
+        </div>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
